--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     section h2{color:#5a45d5;margin-bottom:.5rem}
     a{color:#ff6ec4;font-weight:bold;text-decoration:none}
     footer{background:#eee;text-align:center;font-size:.9rem;padding:1rem;color:#666}
-    canvas{position:fixed;top:0;left:0;width:100vw;height:100vh;touch-action:none;z-index:9990;}
-    #toolbox{position:fixed;bottom:1rem;left:50%;transform:translateX(-50%);
+    #drawCanvas{
+      position:absolute;
+      top:0; left:0;
+      width:100vw;
+      height:100vh;
+      pointer-events:auto;
+      touch-action:none;
+      z-index:9990;
+    }
+    #toolbox{
+      position:fixed;bottom:1rem;left:50%;transform:translateX(-50%);
       background:#ffffffee;border-radius:1rem;box-shadow:0 2px 6px rgba(0,0,0,.2);
-      display:flex;flex-wrap:wrap;gap:.6rem;padding:.6rem 1rem;z-index:9991;
-      justify-content:center;align-items:center;}
-    #toolbox button{border:none;border-radius:50%;width:40px;height:40px;font-size:1.2rem;
-      display:flex;align-items:center;justify-content:center;background:#eee;color:#333;cursor:pointer;}
+      display:flex;flex-wrap:wrap;gap:.6rem;padding:.6rem 1rem;z-index:9991;justify-content:center;align-items:center;
+    }
+    #toolbox button{border:none;border-radius:50%;width:40px;height:40px;font-size:1.2rem;display:flex;align-items:center;justify-content:center;background:#eee;color:#333;cursor:pointer;}
     #toolbox button.active{background:#ff6ec4;color:#fff}
     #toolbox input[type="color"],#toolbox input[type="range"]{height:30px;}
     #toolbox label{font-size:0.75rem;text-align:center;color:#666;}
@@ -64,11 +72,14 @@
   let color = '#333';
   let thickness = 4;
 
-  const resizeCanvas = () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-  };
+  // ページ全体に追従するcanvasサイズ
+  function resizeCanvas() {
+    // キャンバスの大きさをページ全体（スクロール分含む）に合わせる
+    canvas.width  = Math.max(document.documentElement.scrollWidth,  document.documentElement.clientWidth,  window.innerWidth || 0);
+    canvas.height = Math.max(document.documentElement.scrollHeight, document.documentElement.clientHeight, window.innerHeight || 0);
+  }
   window.addEventListener('resize', resizeCanvas);
+  window.addEventListener('scroll', resizeCanvas); // ページが動的に伸びた時も
   resizeCanvas();
 
   const penBtn = document.getElementById('penBtn');
@@ -98,10 +109,16 @@
   thicknessSlider.addEventListener('input', (e) => { thickness = parseInt(e.target.value); });
   setMode(false);
 
+  // --- 描画イベント ---
+  const getXY = (e) => {
+    const t = e.touches ? e.touches[0] : e;
+    // 描画位置はpageX/pageY（ページ全体の座標！）
+    return [t.pageX, t.pageY];
+  };
+
   const startDrawing = (e) => {
     drawing = true;
-    const t = e.touches ? e.touches[0] : e;
-    [lastX, lastY] = [t.clientX, t.clientY];
+    [lastX, lastY] = getXY(e);
     ctx.beginPath();
     ctx.moveTo(lastX, lastY);
   };
@@ -109,15 +126,15 @@
   const draw = (e) => {
     if (!drawing) return;
     e.preventDefault();
-    const t = e.touches ? e.touches[0] : e;
+    const [x, y] = getXY(e);
     ctx.lineWidth = thickness;
     ctx.lineCap = 'round';
     ctx.globalCompositeOperation = erasing ? 'destination-out' : 'source-over';
     ctx.strokeStyle = erasing ? 'rgba(0,0,0,1)' : color;
-    ctx.lineTo(t.clientX, t.clientY);
+    ctx.lineTo(x, y);
     ctx.stroke();
     ctx.beginPath();
-    ctx.moveTo(t.clientX, t.clientY);
+    ctx.moveTo(x, y);
   };
 
   const stopDrawing = () => {
